--- a/src/main/resources/static/autos.html
+++ b/src/main/resources/static/autos.html
@@ -39,17 +39,27 @@
                 <h2>BMW X5 2020</h2>
                 <img src="imagenes/x5.jpg" alt=""/><br>
                 <p>Cambios:Automatico</p><br>
-                <p>Precio:$45.000</p>
+                <p>Precio:$95.000</p>
                 <p>------------------------------------------------------------------------</p>
                 <h2>Mercedes Benz GLC 2022</h2>
                 <img src="imagenes/GLC.jpg" alt=""/><br>
                 <p>Cambios:Automatico</p><br>
-                <p>Precio:$75.000</p><br>
+                <p>Precio:$125.000</p><br>
                 <p>------------------------------------------------------------------------</p>
                 <h2>Porche Cayenne 2017</h2>
                 <img src="imagenes/cayenne.jpg" alt=""/><br>
                 <p>Cambios:Manual</p><br>
                 <p>Precio:$60.000</p><br>
+                <p>------------------------------------------------------------------------</p>
+                <h2>Can Am Maverick 2020</h2>
+                <img src="imagenes/can-am.jpg" alt=""/><br>
+                <p>Cambios:Automatico - 4x4</p><br>
+                <p>Precio:$30.000</p><br>
+                <p>------------------------------------------------------------------------</p>
+                <h2>Twingo 2022</h2>
+                <img src="imagenes/twingo.jpg" alt=""/><br>
+                <p>Cambios:Automatico</p><br>
+                <p>Precio:$40.000</p><br>
                 <p>------------------------------------------------------------------------</p>
 
             </div>
