--- a/src/main/resources/static/contacto.html
+++ b/src/main/resources/static/contacto.html
@@ -36,16 +36,16 @@
                 <h1>Redes Sociales</h1>
             </div>
             <div class="catEstilo">
-                <h2>FACEBOOK</h2><br>
-                <h3><a href="https://facebook.com/" target="_blank">Facebook.com/CarShop</a></h3><br><br>
-                <h2>INSTAGRAM</h2><br>
-                <h3><a href="https://instagram.com/" target="_blank">Instagrama.com/CarShop</a></h3><br><br>
-                <h2>TWITTER</h2><br>
-                <h3><a href="https://twitter.com/" target="_blank">Twitter.com/CarShop</a></h3><br><br>
-                <h2>TIK TOK</h2><br>
-                <h3><a href="https://tiktok.com/" target="_blank">TikTok.com/CarShop</a></h3><br><br>
-                <h2>WhatsApp</h2><br>
-                <h3><a href="https://whatsapp.com/" target="_blank">WhatsApp.com/CarShop</a></h3><br><br>
+                <h2>FACEBOOK</h2><i class='bx bxl-facebook-circle' ></i><br>
+                <h3><a href="https://facebook.com/" target="_blank">Facebook.com/CarShop</a></h3><br>
+                <h2>INSTAGRAM</h2><i class='bx bxl-instagram'></i><br>
+                <h3><a href="https://instagram.com/" target="_blank">Instagrama.com/CarShop</a></h3><br>
+                <h2>TWITTER</h2><i class='bx bxl-twitter' ></i><br>
+                <h3><a href="https://twitter.com/" target="_blank">Twitter.com/CarShop</a></h3><br>
+                <h2>TIK TOK</h2><i class='bx bxl-tiktok' ></i><br>
+                <h3><a href="https://tiktok.com/" target="_blank">TikTok.com/CarShop</a></h3><br>
+                <h2>WhatsApp</h2><i class='bx bxl-whatsapp' ></i><br>
+                <h3><a href="https://whatsapp.com/" target="_blank">WhatsApp.com/CarShop</a></h3><br>
 
             </div>
         </section>
