--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -86,6 +86,7 @@
         </div>
             <div class="login">
         <form>
+            <h3>Iniciar Sesion</h3>
             <label for="username">Nombre de Usuario:</label>
             <input type="text" id="username" name="username" required>
 
@@ -94,8 +95,8 @@
 
             <input type="submit" value="Iniciar Sesión" onclick="iniciarSesion(event)">
         </form>
-
-        <h2>Registrarse</h2>
+        <br><br>
+        <h3>Registrarse</h3>
         <form>
             <label for="reg-username">Nombre de Usuario:</label>
             <input type="text" id="reg-username" name="reg-username" required>
