AVANCE 3 - AVANCE JOE PT1

--- a/src/main/resources/static/accesorios.html
+++ b/src/main/resources/static/accesorios.html
@@ -106,9 +106,8 @@
                         </form>
                     </div>
                 </div>
-            </section>
-        </section>
-
+            <section>
+                
         <script>
             function toggleSearchBox() {
                 var searchBox = document.querySelector('.search-box');
