AVANCE FINAL - Prueba

--- a/src/main/resources/static/autos.html
+++ b/src/main/resources/static/autos.html
@@ -22,7 +22,7 @@
                 <ul class="navbar">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="autos.html" class="activo">Autos</a></li>
-                    <li><a href="autos.html">Autos</a></li>
+                    <li><a href="accesorios.html">Accesorios</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="citas.html">Citas</a></li>
                     <li><a href="login.html">Iniciar Sesión</a></li>
