--- a/src/main/resources/static/autos.html
+++ b/src/main/resources/static/autos.html
@@ -85,46 +85,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Ventana emergente con el formulario para agregar auto (inicialmente oculta) -->
-                <div id="ventanaEmergente" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 165, 0, 0.5); z-index: 9999;">
-                    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #fff; padding: 20px; border-radius: 10px;">
-                        <h3>Agregar Auto</h3>
-                        <form action="/auto/guardar" method="POST" class="was-validated" enctype="multipart/form-data">
-                            <div class="modal-body">
-                            <div class="mb-3">
-                                <label for="descripcion">Modelo</label>
-                                <input type="text" class="form-control" name="modelo" required="true"/>
-                            </div>
-                            <div class="mb-3">
-                                <label for="descripcion">Marca</label>
-                                <input type="text" class="form-control" name="marca" required="true"/>
-                            </div>
-                            <br>
-                            <div class="mb-3">
-                                <label for="descripcion">Precio</label>
-                                <input type="text" class="form-control" name="precio" required="true"/>
-                            </div>
-                            <br>
-                            <div class="mb-3">
-                                <label for="activo">Activo</label>
-                                <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
-                            </div>
-                            <div class="mb-3">
-                                <label for="imagen">Imagen</label>
-                                <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);"/>
-                                <img id="blah" src="#" alt="Tu imagen" height="200"/>
-                            </div>
-                            <br>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-primary" type="submit">Guardar</button>
-                            <button class="btn btn-secondary" type="button" onclick="cerrarVentanaEmergente()">Cancelar</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </section>
                 
         <script>
             function toggleSearchBox() {
@@ -133,14 +93,10 @@
             }
 
             function mostrarFormulario() {
-                var ventanaEmergente = document.getElementById("ventanaEmergente");
-                ventanaEmergente.style.display = "block";
+                window.location.href = "auto/listado";
             }
 
-            function cerrarVentanaEmergente() {
-                var ventanaEmergente = document.getElementById("ventanaEmergente");
-                ventanaEmergente.style.display = "none";
-            }
+           
         </script>
 
         <br>
