--- a/src/main/resources/static/autos.html
+++ b/src/main/resources/static/autos.html
@@ -25,7 +25,8 @@
                     <li><a href="accesorios.html">Accesorios</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="citas.html">Citas</a></li>
-                    <li><a href="login.html">Iniciar Sesión</a></li>
+                    <li><a href="login.html">Iniciar</a></li>
+                    <li><a href="comentario.html">Reseñas</a></li>
                 </ul>
 
                 <i class='bx bx-search-alt-2' id="buscar-icon" onclick="toggleSearchBox()"></i>
