--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,9 +30,10 @@
                     <li><a href="accesorios.html">Accesorios</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="citas.html">Citas</a></li>
-                    <li><a href="login.html">Iniciar Sesion</a></li>
+                    <li><a href="login.html">Iniciar</a></li>
+                    <li><a href="comentario.html">Reseñas</a></li>
                     <li><a href="?lang=es">ES</a></li>
-                    <li><a href="?lang=en">EN</a></li>   
+                    <li><a href="langEN.html">EN</a></li>
                 <i class='bx bx-search-alt-2' id="buscar-icon" onclick="toggleSearchBox()"></i>
 
                 <div class="search-box container">
