--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -22,7 +22,8 @@
                     <li><a href="accesorios.html">Accesorios</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="citas.html">Citas</a></li>
-                   <li><a href="login.html" class="activo">Iniciar Sesion</a></li>
+                   <li><a href="login.html" class="activo">Iniciar</a></li>
+                    <li><a href="comentario.html">Reseñas</a></li>
                 </ul>
 
                 <i class='bx bx-search-alt-2' id="buscar-icon" onclick="toggleSearchBox()"></i>
